--- a/script-1.html
+++ b/script-1.html
@@ -8,11 +8,6 @@
 <body>
     <h1 id="heading">자바스크립트</h1>
     <p id="text">위의 텍스트를 클릭해 보세유</p>
-    <script>
-        var heading = document.querySelector('#heading');
-        heading.onclick = function () {
-            heading.style.color = "red";
-        }
-    </script>
+    <script src="js/change-color.js"></script>
 </body>
 </html>
