기리길이기억되리

--- a/alert.html
+++ b/alert.html
@@ -5,9 +5,9 @@
 // var name = prompt("이름을 입력하세유") // 기본값 지정 X
 // document.write("<h1>안녕하세요</h1>") // document.write 문
 
-var name = prompt("이름을 입력하세유", "기리형")
+var name = prompt("이름을 입력하세유", "기리길이기억되리")
 console.log(name+"님, 어서오세요!")
-document.write("<h1>언뇽하삽나까</h1>")
+document.write("<h1>언뇽하삽나까?</h1>")
 document.write("<b>"+ name + "</b>님, 어서오세요!")
 document.write("<br>")
 var now = new Date(); // 현재 날짜 가져오기
