--- a/main.html
+++ b/main.html
@@ -9,7 +9,8 @@
     <h1>공부 기록</h1>
     <section>
         <h3>2024-05-08</h3>
-        <p>오늘 자바스크립트 첫 날, 그리고 깃허브 첫 날</p>
+        <p>오늘 자바스크립트 첫 날, 그리고 깃허브 첫 날</p> <br>
+        <p>깃허브 연동</p>
     </section>
 </body>
 </html>
