텍스트 또 수정

--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
     <section>
         <h3>2024-05-08</h3>
         <p>오늘 자바스크립트 첫 날, 그리고 깃허브 첫 날</p> <br>
-        <p>깃허브 연동</p>
+        <p>깃허브 연동</p> <br>
+        <p>깃배쉬 이메일 변경... 후... 계정 바뀌나...? 24-05-09 am12:25</p>
     </section>
 </body>
 </html>
